# coptic-translator-backend

./: .gitignore  Dockerfile.cpu  Dockerfile.gpu  LICENSE.md  README.md  build_docker.sh  dictionary_translator.py  parse_data.py  train.py  train.sh
notebooks/: add_romanize_col.ipynb  analyze_data_cartography.ipynb  analyze_datasets.ipynb  analyze_monolingual.ipynb  analyze_rttl.ipynb  backtranslation_dataset.ipynb  bohairic.ipynb  clean_raw_data.ipynb  create_dataset.ipynb  dataset_split.ipynb  dictionary_translations.ipynb  extract_dictionary.ipynb  extract_monolingual.ipynb  hieroglyphs_dataset.ipynb  translate_monolingual.ipynb  translate_opus_dataset.ipynb
pipelines/: coptic_english_pipeline.py  english_coptic_pipeline.py
server/: package.json
server_gcp/: index.js  package-lock.json
server_huggingface/: helper.js  index.js  package-lock.json  package.json
server_python/: Dockerfile  main.py  pyproject.toml  read_keys.py  requirements.txt  util.py
server_python/universal_translator/: languages.json  llm_translate.py
translation/: architecture.py  base_model.py  config_consts.py  data_utils.py  environment.txt  huggingface_model.py  iterators.py  model.py  setup.py  testing_utils.py  training_utils.py  trie.py  utils.py
