[project]
name = "coptic-translator-backend"
version = "0.1.0"
description = "Backend server for Coptic translation"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0.2",
    "flask-limiter>=3.8.0",
    "googletrans-py>=4.0.0",
    "python-dotenv>=1.0.1",
    "requests>=2.31.0",
    "anthropic>=0.71.0",
    "openai>=2.6.1",
    "gunicorn>=21.0.0",
]

[project.scripts]
server = "main:app"
